# Cassebriques

./: .gitignore  CMakeLists.txt  COMMANDES_RAPIDES.md  GUIDE_INSTALLATION.md  INSTRUCTIONS_COMPILATION.md  PROBLEMES_COMPILATION.md  README.md  RESUME_PRESENTATION_REBORN.txt  SPECIFICATIONS_TECHNIQUES.md  STATUT_PROJET.md  compile.bat  fait.txt  main.cpp  settings.ini
cmake/toolchains/: msys2-mingw64.cmake
levels/: level1.txt
scripts/: build_mingw.bat  build_mingw.ps1
src/app/: App.cpp  App.hpp  Assets.cpp  Assets.hpp  Scene.hpp  Settings.cpp  Settings.hpp
src/core/: AABB.cpp  AABB.h  AABB.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  InputManager.cpp  InputManager.h  InputManager.hpp
src/game/: Ball.cpp  Ball.h  Ball.hpp  Brick.cpp  Brick.h  Brick.hpp  Game.cpp  Game.h  Game.hpp  Paddle.cpp  Paddle.h  Paddle.hpp
src/game_reborn/: Brick.cpp  Brick.h  Brick.hpp  Cannon.cpp  Cannon.h  Cannon.hpp  GameReborn.cpp  GameReborn.h  GameReborn.hpp  Projectile.cpp  Projectile.h  Projectile.hpp
src/menu/: Menu.cpp  Menu.hpp
src/scenes/: ClassicGameScene.cpp  MainMenuScene.cpp  RebornGameScene.cpp  SettingsScene.cpp
src/ui/: Button.cpp  Button.hpp
